2025-01-05T01:51:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12615539487 # 531
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-05
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 984 1739 / 987 1742
* notice: next accum: outdated-unq outdated-all / unq all: 985 1740 / 987 1742
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-12-22] / []

2025-01-04T01:42:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12606379021 # 530
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-04
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 984 1739 / 986 1741
* notice: next accum: outdated-unq outdated-all / unq all: 984 1739 / 987 1742
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-01-03]

2024-12-31T01:44:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12554226620 # 526
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-31
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 984 1739 / 985 1740
* notice: next accum: outdated-unq outdated-all / unq all: 984 1739 / 986 1741
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-12-30]

2024-12-26T01:43:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12498367866 # 521