@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-01-05T01:51:40Z",
+  "timestamp" : "2025-01-08T01:45:19Z",
   "count_outdated" : 1740,
   "uniques_outdated" : 985,
-  "count" : 1742,
-  "uniques" : 987,
+  "count" : 1743,
+  "uniques" : 988,
   "clones" : [
     {
       "timestamp": "2024-12-30T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-01-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-01-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
