@@ -1,3 +1,12 @@
+2025-01-08T01:45:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12662515564 # 534
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-08
+* notice: last 14d: unq all: 2 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 985 1740 / 987 1742
+* notice: next accum: outdated-unq outdated-all / unq all: 985 1740 / 988 1743
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-01-07]
+
 2025-01-05T01:51:40Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12615539487 # 531
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-05
